# ViLGOD

./: .gitignore  LICENSE  README.md  setup.cfg
src/dataclass/: evaluation.py  objects.py
src/datasets/: argo2_dataset.py  waymo_dataset.py  waymo_eval.py
src/utils/: clip_utils.py  cluster_utils.py  common_utils.py  eval_utils.py  mv_utils.py  pointcloud_utils.py  tracking_utils.py
src/vilgod/: lidar_frame.py  tracker.py  zero_shot_detector.py
tools/: preprocess_data.py
tools/configs/: preprocessing.yaml
tools/configs/dataset/: argoverse_dataset.yaml  waymo_dataset.yaml
tools/configs/hydra/: default.yaml
tools/configs/preprocessor/: argoverse.yaml  base_cfg.yaml  waymo.yaml
