[metadata]
name = ViLGOD
version = 1.0.0
author = Christian Fruhwirth-Reisinger
author_email = reisinger@tugraz.at
description = Vision-Language Guidance for LiDAR-based Unsupervised 3D Object Detection
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    3d object detection
    Unsupervised
    zero shot
    LiDAR
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = src
